# jira-openai-bot

./: Readme.md  pyproject.toml
app/: main.py  server.py
app/customBot/: JiraTicketSearchInput.py  JiraTicketTool.py  WebServiceJiraCaller.py
